# lapce-powershell-plugin

./: .gitignore  Cargo.toml  Makefile.toml  README.md  justfile  plugin.toml  ps_test.ps1  volt.toml
src/: main.rs
