[package]
edition = "2021"
name = "lapce-powershell"
version = "0.0.1"
# resolver = "2"

[target.'cfg(target_os = "wasi")'.dependencies]
zip = { version = "0.6", default-features = false, features = ["deflate"] }

anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lapce-plugin = "0.1.1"
#lapce-plugin = { path = "../lapce-plugin-rust" }

 [profile.release]
 opt-level = 3
 lto = true
 codegen-units = 1
 strip = true
 panic = "abort"
